[MOD] DNS list updated

--- a/etc/dnsmasq.d/search.conf
+++ b/etc/dnsmasq.d/search.conf
@@ -1,6 +1,6 @@
 ipset=/google.com/vpn
 server=/google.com/127.0.0.1#5300
 
-ipset=/google.com.hk/vpn
-server=/google.com.hk/127.0.0.1#5300
+ipset=/google.co.jp/vpn
+server=/google.co.jp/127.0.0.1#5300
 
