--- a/etc/dnsmasq.d/social.conf
+++ b/etc/dnsmasq.d/social.conf
@@ -12,3 +12,6 @@ server=/instagram.com/127.0.0.1#5300
 
 ipset=/twitter.com/vpn
 server=/twitter.com/127.0.0.1#5300
+
+ipset=/ntdtv.com/vpn
+server=/twitter.com/127.0.0.1#5300
