[ADD] telegram added

--- a/etc/dnsmasq.d/social.conf
+++ b/etc/dnsmasq.d/social.conf
@@ -15,3 +15,6 @@ server=/twitter.com/127.0.0.1#5300
 
 ipset=/ntdtv.com/vpn
 server=/twitter.com/127.0.0.1#5300
+
+ipset=/telegram.org/vpn
+server=/telegram.org/127.0.0.1#5300
