[MOD] facebook.net added

--- a/etc/dnsmasq.d/social.conf
+++ b/etc/dnsmasq.d/social.conf
@@ -18,3 +18,6 @@ server=/twitter.com/127.0.0.1#5300
 
 ipset=/telegram.org/vpn
 server=/telegram.org/127.0.0.1#5300
+
+ipset=/facebook.net/vpn
+server=/facebook.net/127.0.0.1#5300
