[MOD] turn.com added

--- a/etc/dnsmasq.d/search.conf
+++ b/etc/dnsmasq.d/search.conf
@@ -4,3 +4,5 @@ server=/google.com/127.0.0.1#5300
 ipset=/google.co.jp/vpn
 server=/google.co.jp/127.0.0.1#5300
 
+ipset=/turn.com/vpn
+server=/turn.com/127.0.0.1#5300
