[MOD] yieldmanager.com added

--- a/etc/dnsmasq.d/search.conf
+++ b/etc/dnsmasq.d/search.conf
@@ -6,3 +6,6 @@ server=/google.co.jp/127.0.0.1#5300
 
 ipset=/turn.com/vpn
 server=/turn.com/127.0.0.1#5300
+
+ipset=/yieldmanager.com/vpn
+server=/yieldmanager.com/127.0.0.1#5300
