[ADD] youtube related added

--- a/etc/dnsmasq.d/game.conf
+++ b/etc/dnsmasq.d/game.conf
@@ -1,11 +1,11 @@
 #ipset=/agar.io/vpn
 #server=/agar.io/127.0.0.1#5300
 
-ipset=/:gamersky\.com:/vpn
-server=/:gamersky\.com:/127.0.0.1#5300
-
 ipset=/playstation.com/vpn
 server=/playstation.com/127.0.0.1#5300
 
 ipset=/googleapis.com/vpn
 server=/googleapis.com/127.0.0.1#5300
+
+ipset=/sonyentertainmentnetwork.com/vpn
+server=/sonyentertainmentnetwork.com/127.0.0.1#5300
