--- a/etc/dnsmasq.d/search.conf
+++ b/etc/dnsmasq.d/search.conf
@@ -9,3 +9,6 @@ server=/turn.com/127.0.0.1#5300
 
 ipset=/yieldmanager.com/vpn
 server=/yieldmanager.com/127.0.0.1#5300
+
+ipset=/ip.cn/vpn
+server=/ip.cn/127.0.0.1#5300
