--- a/etc/dnsmasq.d/social.conf
+++ b/etc/dnsmasq.d/social.conf
@@ -21,3 +21,24 @@ server=/telegram.org/127.0.0.1#5300
 
 ipset=/facebook.net/vpn
 server=/facebook.net/127.0.0.1#5300
+
+ipset=/telegram.me/vpn
+server=/telegram.me/127.0.0.1#5300
+
+ipset=/t.me/vpn
+server=/t.me/127.0.0.1#5300
+
+ipset=/pornhub.com/vpn
+server=/pornhub.com/127.0.0.1#5300
+
+ipset=/shadowsocks.org/vpn
+server=/shadowsocks.org/127.0.0.1#5300
+
+ipset=/ytimg.com/vpn
+server=/ytimg.com/127.0.0.1#5300
+
+ipset=/ggpht.com/vpn
+server=/ggpht.com/127.0.0.1#5300
+
+ipset=/googlevideo.com/vpn
+server=/googlevideo.com/127.0.0.1#5300
