[ADD] google.co.th added

--- a/etc/dnsmasq.d/search.conf
+++ b/etc/dnsmasq.d/search.conf
@@ -12,3 +12,6 @@ server=/yieldmanager.com/127.0.0.1#5300
 
 ipset=/ip.cn/vpn
 server=/ip.cn/127.0.0.1#5300
+
+ipset=/google.co.th/vpn
+server=/google.co.th/127.0.0.1#5300
